--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>Fujimoto Yuka</title>
+  <title>Fujimoto Yuika</title>
   <link rel="icon" href="logo32px.png">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="stylesheet.css">
@@ -108,8 +108,8 @@
         <p>　19歳で就職した私はパティシエの仕事に打ち込み、セミナーや大会に休みを費やす日々を</br>
           過ごしていました。そんなある時スランプに陥ってしまい、親のために、会社のためにと</br>
           働いてきた私は、仕事ができなくなった自分への存在価値を失い退職しました。そんな私が</br>
-          ５年後にはベトナムに住み、新しい価値観に触れる事で、今の私で良いんだと思えるように</br>
-          なることは当時の私は全く想像していませんでした。</br></p>
+          ５年後にはベトナムに住み、今の私で良いんだと思えるようになるまでに、国内外で沢山の方と</br>
+          関わり、様々な経験をしました。</br></p>
       </div>
       <div class="Next-page">
         <a href="future.html"><img src="pictures/nextpage.png" width="150px"></a>
