--- a/value.html
+++ b/value.html
@@ -20,7 +20,7 @@
 
       <div class="nav">
         <ul class="nav-list">
-          <li><a href="#TOP">TOP</a></li>
+          <li><a href="index.html#TOP">TOP</a></li>
           <li><a href="index.html#profile">PROFILE</a></li>
           <li><a href="index.html#skill">SKILL</a></li>
           <li><a href="index.html#life">LIFE</a></li>
@@ -58,7 +58,7 @@
           <img src="pictures/chatting2.png" width="200px">
         </div>
         <div class="pic3">
-          <img src="pictures/chatting3.png" width="200px">
+          <img src="pictures/chatting3.png" width="230px">
         </div>
    </div>
 
@@ -143,5 +143,4 @@
 
 </body>
 </html>
-
 
