--- a/future.html
+++ b/future.html
@@ -34,18 +34,17 @@
       <h2 class="story-title">STORY</h2>
 
       <div class="story-top">
-          <h3>最後に私の話をさせていただきます。</br>
-            もう暫くお付き合いくださいませ...</h3>
-        
+      <p>最後にもう少し、ここ５年間のお話を通して、私の価値観について知っていただけるような</br>
+        ページを作りました。お時間許す限りお付き合いいただければ幸いです。</br></p>
         <div class="top-pic">
           <img src="images/umi.jpg" width="600px">
         </div>
         <div class="top-p">
           <p>　今まで作ることばかりでお酒の飲み方も知らなかった当時の私はパティシエを辞めて</br>
             今の夫と出会った事をきっかけに、自分の常識外の世界を沢山経験することになるのでした。</br>
-            ”日本の常識”の中の会社のルールに沿って、いかに求められる人間でいるかに価値を</br>
-            置いていた当時の私は、初海外でそれが逆に何もないことに圧倒されて自分が何を</br>
-            したいかすらわからずに終わってしまいました。</br></p>
+            ”日本の常識”の中の会社のルールに沿って、いかに求められる人間でいるかに価値を置いていた</br>
+            当時の私は、海外でそれが逆に何もないことに圧倒され,初めての海外旅行では自分が何をしたいかすら</br>
+            わからずに終わってしまいました。しかしここから徐々に私の人生が変わっていきました。</br></p>
         </div>
       </div>
 
@@ -62,7 +61,8 @@
             関係なく市場やショップで欲しい物を見つけては値切りをするようになりました。
             当時の私が話すのはほとんど日本語でしたが、それでも構わず観光地の人たちは
             なんとなく察しながら話してくれます。お陰様で英語が話せないといけないなんて
-            固定概念は勝手に剥がされてしまいました。
+            固定概念は勝手に剥がされてしまいました。これは英語に苦手意識を持っていた私の
+            大きな変化の一つでした。
           </p>
       </div>
 
@@ -77,9 +77,8 @@
     <p>ある時夫がショーパブで働き出した事がきっかけで、夫以外のLGBTQの人達と関わることが多くなりました。</br>
       そこでは”ふつう”ということが無個性でつまらないという世界でした。一般社会では普通でいることに</br>
       執着していた私も、ニューハーフさんやおなべさんと一緒にいる内に、寧ろ自分の枠が外せないことに</br>
-      悶々とすることが増えていきましたが、人に対しては自分の常識を当たり前だと思って話さなくなったので、</br>
-      実は私…と初対面なのにも関わらず話してくれる人が増えていきました。”ふつう”の感覚に当てはまらない</br>
-      悩みを持つ人は、一般社会では話せないことがほとんどです。</br></p>
+      悶々とすることが増えていきました。並大抵の人間には枠を外して武器にすることは相当な覚悟がないと</br>
+      出来ないことでした。逆に言うと、その世界の方達はそれだけの経験や覚悟を持って生きているのです。</br></p>
    </div>
    
    <div class="flex3">
@@ -91,8 +90,8 @@
             <h3>環境の変化</h3>
           </div>
           <div class="story-p3">
-            <p>ベトナムに移住したタイミングでコロナによるスーパーハードロックダウンが始まり、
-            慣れないことに加えて出来ないことが多く、何が出来るのかを模索する日々の中で常に自分と向き合う日々を過ごしました。心が追いつかず自分の小ささにげんなりしましたが、自分の感情を知ることで、”今はそれでいい”と価値観が変わっていきました。昔の私には出来なかった今の自分を受け入れる作業ができたので今ではとても良い経験だったと思います。
+            <p>1年前、ベトナムに移住したタイミングでコロナによるスーパーハードロックダウンが始まり、
+            慣れないことに加えて生活用品を購入出来ないなど禁止事項が多く、何が出来るのかを模索する中で常に自分と向き合う日々を過ごしていました。ある程度こうなりたいという理想を持ってベトナムにくるも、ギャップに心が追いつかず自分の小ささにげんなりしました。しかし自分の感情を知ることで、”今はそれでいい”と少しづつ価値観が変わっていったのです。昔の私には出来なかった今の自分を受け入れる作業ができたことはとても良い経験だったと思います。そういった小さな積み重ねが私には大切な課題でした。
             </p>
           </div>
         </div>
@@ -105,15 +104,20 @@
    <img src="images/me.jpg" width="800px">
    </div>
    <div class="story-p4">
-     <p>以上が私の５年間のお話でした。ここからはこれから先のお話です。これからの目標は、自分のスキル（仕事）と生き方を人に表現することです。</br>
-       私はもっと沢山の人と関わって生きていきたいし、その中で新しい価値観に触れて自分が変化する事を楽しみたい。そうして培うことでできた</br>
-       自分という人間性が生み出すものが人の心に残るなら、私で生まれてきてよかったと思える最後を迎えられるでしょう。そんな素敵な生き方を</br>
-       したいという憧れが、現在ベトナムに住んでいる理由の一つです。</br></p>
+     <p>私にとっての人生とはその積み重ねの中で生まれる何かに気付き、成長することだと思っています。</br>
+       私の人生の目標は、歳をとっても変化し続けることです。沢山の人種と関わってその中で新しい価値観に触れて</br>
+       自分の変化を楽しみ、色々な環境の中で出てくる自分の感情と向き合いながら新しい自分を見つけることです。</br>
+       個人的な話ですが、私は夏木マリさんがとても好きです。歳をとるほどに魅力を感じるあの表現は</br>
+       令和の時代にも決して劣らないものがあります。年齢を重ねるごとに挑戦し変化した自身を表現し続ける</br>
+       姿は当に憧れる生き方です。私もそのようにして年を重ねた自分が積み重ねたスキル（仕事）や生き方が、</br>
+       誰かの心に残り何かしらのスイッチになったり、自分の生み出したものが誰かの生活のほんの一部分になれるなら、</br>
+       きっとそれが生き甲斐となり最高な人生になるでしょう。現在ベトナムに住んでいる理由もその為の一つなのです。</br>
+      最後に充実した人生だったと笑うために、これからも沢山のことに挑戦して生きていきます。</br></p>
    </div>
    <div class="finish">
-     <p>最後まで御覧いただきありがとうございました。</br>
-       藤本優花という人間が少しでも伝わり、一緒に働きたいと思っていただけると幸いです。</br>
-     </p>
+     <p>藤本優花という人間が少しでも伝わり、一緒に働きたいと思っていただけると幸いです。</br>
+     最後まで御覧いただきありがとうございました。</br></p>
+     
    </div>
   </main>
 
@@ -136,4 +140,6 @@
 
 </body>
 </html>
+
+
 
