--- a/index.html
+++ b/index.html
@@ -49,12 +49,11 @@
         </div>
 
         <div class="profile-sentens">
-          <a>1991年生まれ。神奈川県出身。兵庫県で育ち、大阪のパティスリーに就職。</a></br>
-          <a>積極的に大会に挑戦し作品を出品ていたが、</a></br>
-          <a>長時間の肉体労働による過労で退職し神奈川県に拠点を移す。</a></br>
-          <a>近くのパティスリーからお声を頂きアルバイトをしながらBarで働き、現在の夫と出会ったことが</a></br>
-          <a>きっかけで東南アジア海外旅行に行く機会が増え、シンガポール、タイ、カンボジアなど5カ国をめぐり、</a></br>
-          <a>現在はベトナムに在住。夫が経営するジェンダーレスを掲げるBarで働いている。</a></br>
+          <p>1991年生まれ。神奈川県出身。兵庫県で育ち、大阪のパティスリーに就職。</br>
+          大会に挑戦し作品を出品するなど積極的に打ち込む。</br>
+          過労で退職し神奈川県に拠点を移し、近くのBarで働きそこで現在の夫と出会ったことが</br>
+          きっかけで東南アジアへ海外旅行に行きはじめる。シンガポール、タイ、カンボジアなど</br>
+          5カ国をめぐり、現在はベトナムに在住。夫が経営するジェンダーレスを掲げるBarで働いている。</br></p>
         </div>
       </div> 
     </div>
@@ -69,8 +68,9 @@
             <img class="maining" src="pictures/css4.png" width="140px" style="margin-right:10px;">
           </div>
           <div class="skill-sentens">
-            <a>独学がメインで勉強したのでまだまだ至らない点はありますが、</a></br>
-            <a>コードを打ち込んでいる時は時間があっという間に過ぎる程熱中します。</a></br>
+            <p>HTML,CSSを学習しています。独学がメインで勉強したのでまだまだ至らない点は</br>
+              ありますが、コードを打ち込んでいる時は時間があっという間に過ぎる程熱中します。</br>
+            趣味で動画編集もおこなっております。</br></p>
           </div>
         </div>
     </div>
