--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
 
         <div class="profile-sentens">
           <p>1991年生まれ。神奈川県出身。兵庫県で育ち、大阪のパティスリーに就職。</br>
-          大会に挑戦し作品を出品するなど積極的に打ち込む。</br>
-          過労で退職し神奈川県に拠点を移し、近くのBarで働きそこで現在の夫と出会ったことが</br>
+          退職後神奈川県に拠点を移し、近くのBarで働きそこで現在の夫と出会ったことが</br>
           きっかけで東南アジアへ海外旅行に行きはじめる。シンガポール、タイ、カンボジアなど</br>
           5カ国をめぐり、現在はベトナムに在住。夫が経営するジェンダーレスを掲げるBarで働いている。</br></p>
         </div>
