--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
             <img class="maining" src="pictures/css4.png" width="140px" style="margin-right:10px;">
           </div>
           <div class="skill-sentens">
-            <p>HTML,CSSを学習しています。独学がメインで勉強したのでまだまだ至らない点は</br>
-              ありますが、コードを打ち込んでいる時は時間があっという間に過ぎる程熱中します。</br>
-            趣味で動画編集もおこなっております。</br></p>
+            <p>HTML,CSSを独学メインで学習しました。簡単なホームページが作成できます。</br>
+            趣味でDaVinci Resolveを使った動画作成、編集もおこなっております。</br></p>
           </div>
         </div>
     </div>
@@ -98,17 +97,15 @@
 
     <div class="main-bottom">
       <div class="Gorl-title"> 
-       <h2 id="future">Gorl in my life</h2>
+       <h2 id="future">Story</h2>
       </div>
       <div class="Gorl-photo">
         <img src="images/vietnam.jpg" width="700px">
       </div>
       <div class="Gorl-messese">
         <p>　19歳で就職した私はパティシエの仕事に打ち込み、セミナーや大会に休みを費やす日々を</br>
-          過ごしていました。そんなある時スランプに陥ってしまい、親のために、会社のためにと</br>
-          働いてきた私は、仕事ができなくなった自分への存在価値を失い退職しました。そんな私が</br>
-          ５年後にはベトナムに住み、今の私で良いんだと思えるようになるまでに、国内外で沢山の方と</br>
-          関わり、様々な経験をしました。</br></p>
+          過ごしていました。そんなある時スランプに陥ってしまいそのまま退職した私がその５年後、</br>
+          今の私で良いんだと思えるようになるまでに、沢山の方と関わり様々な経験をしました。</br></p>
       </div>
       <div class="Next-page">
         <a href="future.html"><img src="pictures/nextpage.png" width="150px"></a>
