--- a/index.html
+++ b/index.html
@@ -32,13 +32,11 @@
   </header>
 
   <main>
-  <!--写真です-->
     <div class="main-top">
       <div class="top-wrapper">
         <img class="maining" src="images/profi.jpg" width="300px">
       </div>
 
-  <!--プロフィールです-->
       <div class="profile">
         <div class="profile-title">
           <h2 id="profile">Profile</h2>
@@ -50,9 +48,9 @@
 
         <div class="profile-sentens">
           <p>1991年生まれ。神奈川県出身。兵庫県で育ち、大阪のパティスリーに就職。</br>
-          退職後神奈川県に拠点を移し、近くのBarで働きそこで現在の夫と出会ったことが</br>
-          きっかけで東南アジアへ海外旅行に行きはじめる。シンガポール、タイ、カンボジアなど</br>
-          5カ国をめぐり、現在はベトナムに在住。夫が経営するジェンダーレスを掲げるBarで働いている。</br></p>
+          退職後神奈川県に拠点を移しBarで働き始め、そこで現在の夫と出会ったことが</br>
+          きっかけで東南アジアへ海外旅行に行きはじめました。シンガポール、タイ、カンボジアなど</br>
+          5カ国をめぐり、現在はベトナムに在住。夫が経営するジェンダーレスを掲げるBarで働いています。</br></p>
         </div>
       </div> 
     </div>
@@ -87,10 +85,7 @@
               <a href="value.html"><img class="life" src="pictures/birthday.png" width="180px"style="margin-right:20px;">
               <p>Value</p></a>
             </div>
-            <!-- <div class="Activitiy">
-              <a href="#"><img class="life" src="pictures/fox.png" width="180px">
-              <p>Activitiy</p></a>
-            </div> -->
+           
         </div>
       </div>
     </div>
@@ -160,4 +155,3 @@
 
 </body>
 </html>
-
