--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
         <img src="images/vietnam.jpg" width="700px">
       </div>
       <div class="Gorl-messese">
-        <p>　19歳で就職した私はパティシエの仕事に打ち込み、セミナーや大会に休みを費やす日々を</br>
-          過ごしていました。そんなある時スランプに陥ってしまいそのまま退職した私がその５年後、</br>
-          今の私で良いんだと思えるようになるまでに、沢山の方と関わり様々な経験をしました。</br></p>
+        <p>　19歳で就職した私はパティシエの仕事に打ち込み、セミナーや大会に休みを費やす日々を
+          過ごしていました。そんなある時スランプに陥ってしまいそのまま退職した私がその５年後、
+          今の私で良いんだと思えるようになるまでに、沢山の方と関わり様々な経験をしました。</p>
       </div>
       <div class="Next-page">
         <a href="future.html"><img src="pictures/nextpage.png" width="150px"></a>
@@ -155,3 +155,4 @@
 
 </body>
 </html>
+
