--- a/precious.html
+++ b/precious.html
@@ -36,7 +36,7 @@
         <h2>Precious</h2>
       </div>
       <div class="presious-title-p">
-        <p>私生活において私が大切にしていること</p>
+        <p>私が大切にしていること</p>
       </div>
     
       
